--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,6 @@
     {{title}}
   </h1>
   
-  <button type="button" routerLink="/customers">Customers</button>
-  <button type="button" routerLink="/inventory">Inventory</button>
+  <button type="button" routerLink="/clientes">Customers</button>
+  <button type="button" routerLink="/inventario">Inventory</button>
   <button type="button" routerLink="/home">Home</button>
