--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,3 +1,1 @@
-<div *ngFor="let customer of customers">
-    <app-card-list cardTitle="{{customer.lastName}}" cardImage="{{customer.image}}"></app-card-list>
-</div>
+<app-card-list></app-card-list>
