--- a/src/app/components/card-list/card-list.component.html
+++ b/src/app/components/card-list/card-list.component.html
@@ -11,6 +11,7 @@
         data.field2value, 
         data.field3value,
         data.field4value,
+        data.type,
         data.image)" >
         <img class="card-img-top" src="{{data.image}}">
         <div class="card-body">
