--- a/src/app/components/customers/customers.component.css
+++ b/src/app/components/customers/customers.component.css
@@ -1,5 +1,17 @@
-#settings{
-    position: absolute;
-    right: 10px;
-    top: 5px;
-}
+#newCustomerButton {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    width: 50px;
+    height: 50px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    background-color: green;
+    border-color: green;
+    border-radius: 50%;
+
+  }
+
+  
