--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,1 +1,4 @@
 <app-card-list [dataArray]="cardList"></app-card-list>
+
+
+<button id="newCustomerButton" (click)="crearClienteClick()"><fa-icon [icon]="newCustomerIcon"></fa-icon></button>
