--- a/src/app/components/card-list/card-list.component.css
+++ b/src/app/components/card-list/card-list.component.css
@@ -15,7 +15,7 @@
 .card-body{
     border-radius: 3%;
 }
-#settings{
+.settings-button{
     position: fixed;
     right: 10px;
     top: 5px;
@@ -27,3 +27,35 @@
     border-color: green;
     border-radius: 50%;
 }
+
+.delete-button{
+    position: absolute;
+    right: 0;
+    top: 0;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    background-color: red;
+    border-color: red;
+    border-radius: 50%;
+    opacity: 1000 !important;
+}
+
+#newCustomerButton {
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    width: 50px;
+    height: 50px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    color:white;
+    background-color: green;
+    border-color: green;
+    border-radius: 50%;
+
+  }
+
+
