--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -1,1 +1,10 @@
+<app-floating-button 
+    buttonBorderColor="red" 
+    buttonBackGroundColor="red" 
+    buttonLeft="10px" 
+    buttonTop="10px" 
+    routerLink="/home"
+    [buttonIcon]="backIcon"
+    >
+</app-floating-button>
 <app-card-list [dataArray]="cardList"></app-card-list>
