Añadido index a home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,4 @@
 <h1>
     {{title}}
   </h1>
-  
-  <button type="button" routerLink="/clientes">Customers</button>
-  <button type="button" routerLink="/inventario">Inventory</button>
-  <button type="button" routerLink="/home">Home</button>
+  <app-icon-index></app-icon-index>
