Refactorización de la estructura del proyecto, añadido modal de confirmación al eliminar un cliente, añadido elemento al index

--- a/src/app/customers/customers.component.html
+++ b/src/app/customers/customers.component.html
@@ -1,6 +1,6 @@
 <app-floating-button 
-    buttonBorderColor="red" 
-    buttonBackGroundColor="red" 
+    buttonBorderColor="purple" 
+    buttonBackGroundColor="purple" 
     buttonLeft="10px" 
     buttonTop="10px" 
     routerLink="/home"
