--- a/src/app/shared/floating-button/floating-button.component.html
+++ b/src/app/shared/floating-button/floating-button.component.html
@@ -6,6 +6,7 @@
 [style.left]="buttonLeft"
 [style.bottom]="buttonBottom"
 [style.width]="buttonWidth"
-[style.height]="buttonHeight">
+[style.height]="buttonHeight"
+[style.position]="buttonPosition">
     <fa-icon [icon]="buttonIcon"></fa-icon>
 </button>
