--- a/src/app/icon-index/icon-index.component.html
+++ b/src/app/icon-index/icon-index.component.html
@@ -2,10 +2,16 @@
     <button class="button-class purple" routerLink="/clientes">
         <fa-icon [icon]="customersIcon" size="6x"></fa-icon>
     </button>
+
+    <button class="button-class green" routerLink="/">
+        <fa-icon [icon]="materialIcon" size="6x"></fa-icon>
+    </button>
+    
     <button class="button-class blue" routerLink="/">
         <fa-icon [icon]="providersIcon" size="6x"></fa-icon>
     </button>
-    <button class="button-class green" routerLink="/">
-        <fa-icon [icon]="materialIcon" size="6x"></fa-icon>
+    
+    <button class="button-class pink" routerLink="/trabajos">
+        <fa-icon [icon]="worksIcon" size="6x"></fa-icon>
     </button>
 </div>
