--- a/src/app/works-table/works-table.component.html
+++ b/src/app/works-table/works-table.component.html
@@ -67,6 +67,7 @@
         buttonWidth="50px" 
         buttonHeight="50px" 
         [buttonIcon]="newCustomerIcon"
+        [hidden]="settingsPressed"
         (click)="createWorkClick()">
     </app-floating-button>
 </div>
